# HPCShowCase

./: .gitignore  README.md
ParticleSimulator/: Node.cpp  Node.h  a.out  atom.cpp  atom.h  drdatatype.cpp  ghost_pack  innerpro.cpp  linkedlist.cpp  linkedlist.h  main.cpp  pandunpack.cpp  reading  usingTypevector.cpp
ParticleSimulator/topologies/: a.out  topo2DwithDiagnoal.cpp  topology1.cpp  topology2D.cpp
cuda_cpp/Convolution/: CMakeLists.txt  conv1d.cu
cuda_cpp/DynamicParallelism/: CMakeLists.txt  DynamicParallism.md  helloworld.cu
cuda_cpp/GPUProperties/: getGPUProperties.cpp
cuda_cpp/Histogram/: CMakeLists.txt  histogram.cu
cuda_cpp/SOAvsAOS/: ReadMe.MD
cuda_cpp/Sync/: sync.md
cuda_cpp/prefixsum/: CMakeLists.txt  ReadMe.md  prefixSum.cu  prefixSum_basic.cu
cuda_cpp/streams/: cudastreamSquare.cu
testSys/: CMakeLists.txt  MPITimeIt.cpp  TimeIt.cpp
